# autoencoders

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
autoencoders/: __init__.py
autoencoders/models/: __init__.py  base.py  base_config.py  base_model.py
autoencoders/models/ae/: config.py  model.py
autoencoders/models/sae/: model.py
autoencoders/models/vae/: model.py
autoencoders/trainer/: trainer.py
autoencoders/trainers/: config.py  trainer.py
samples/anomaly_detection/: anomaly_detection.ipynb  main.py
src/autoencoders/models/: __init__.py  ae.py  vae.py
src/autoencoders/models/ae/: model.py  output.py
src/autoencoders/models/vae/: model.py  output.py
src/autoencoders/trainer/: config.py
src/autoencoders/trainers/: config.py  trainer.py
tests/: recon_test.py  train_test.py
