[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoencoders"
version = "0.0.1"
authors = [
  { name="phpfontana" },
]
description = "Collection of autoencoder models, utilities for training and evaluation."
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "matplotlib==3.9.1.post1",
    "tensorboard==2.17.1"
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["autoencoder", "vae", "pytorch"]

[project.urls]
Homepage = "https://github.com/phpfontana/autoencoders"
Issues = "https://github.com/phpfontana/autoencoders/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autoencoders*"]
exclude = []