[metadata]
name = autoencoders
version = 0.0.1
author = phpfontana
description = Collection of autoencoder models, utilities for training and evaluation.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = autoencoder, vae, pytorch
url = https://github.com/phpfontana/autoencoders

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch==2.4.0
    torchaudio==2.4.0
    torchvision==0.16.0

[options.packages.find]
where = src
